# guardduty-playbook-commons

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
converter/: __init__.py  cli.py  loader.py
converter/targets/: __init__.py  python_runbook.py  stepfunctions.py  tines.py
docs/: schema.md
playbooks/ec2/: EC2-CryptoCurrency.yaml  EC2-TorClient.yaml
playbooks/iam/: IAMUser-AnomalousBehavior.yaml  IAMUser-InstanceCredentialExfiltration.yaml
playbooks/lambda/: Lambda-NetworkPortProbing.yaml
playbooks/malware/: Malware-EC2MaliciousFile.yaml
playbooks/s3/: S3-BucketPublicAccessGranted.yaml  S3-MaliciousIPCaller.yaml
schema/: playbook.schema.json
tests/: test_python_runbook_output.py  test_schema_validation.py  test_tines_output.py
tests/fixtures/: sample_playbook.yaml
